Fix navbar financiacion mobile

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -163,6 +163,15 @@ li {
     width: 100%;
   }
 
+  .wraperFinance {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .wraperFinance >img {
+    width: 123px;
+    height: 28px;
+  }
 
 @media screen and (max-width: 768px) {
   .hamburger {
